// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option /> Should render and match the snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: none;
}

.c7 {
  margin-right: 5px;
  border-radius: 5px;
}

.c2:disabled + label > .c6 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5:hover {
  cursor: pointer;
}

.c2:disabled + .c4 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #E9F1FB;
  cursor: pointer;
}

<div>
  <div
    class="c0 custom-option"
  >
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2 c3"
        id="test"
        type="checkbox"
      />
      <label
        class="c4 c5"
        for="test"
      >
        <img
          class="c6 c7"
          src="IMAGE_MOCK"
        />
        test
      </label>
    </div>
  </div>
</div>
`;

exports[`<Option /> Should render and match the snapshot 2`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: none;
}

.c7 {
  margin-right: 5px;
  border-radius: 5px;
}

.c2:disabled + label > .c6 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5:hover {
  cursor: pointer;
}

.c2:disabled + .c4 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c0 {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #E9F1FB;
  cursor: pointer;
}

<div>
  <div
    class="c0 custom-option"
  >
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2 c3"
        id="test"
        type="checkbox"
      />
      <label
        class="c4 c5"
        for="test"
      >
        <img
          class="c6 c7"
          src="IMAGE_MOCK"
        />
        test2
      </label>
    </div>
  </div>
</div>
`;
